cluster/apps/download/sabnzbd/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: download
  labels:
    app: sabnzbd
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          #readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 8080
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 8G
            limits:
              cpu: "4"
              memory: 16G
          volumeMounts:
            - name: config
              mountPath: /config
            - name: download
              mountPath: /download
            - name: incomplete
              mountPath: /incomplete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: download
          persistentVolumeClaim:
            claimName: sabnzbd-download
        - name: incomplete
          emptyDir: {}
