cluster/apps/download/sabnzbd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: download
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
