cluster/apps/download/sabnzbd/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-http
  namespace: download
spec:
  hostnames:
    - sabnzbd.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 80
